[package]
name = "pdb_view_search"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.201", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.117"
urlencoding = "2.1.3"
reqwest = { version = "0.12.4", features = ["json"] }
axum-macros = "0.4.1"
